--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "sass": "^1.57.1",
     "stripe": "^11.11.0",
     "styled-components": "^5.3.6",
-    "web-vitals": "^2.1.4",
-    "proxy": "http://localhost:8080"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
